Added new pages for BoxViews and VerticalStackLayout
Updated AppShell.xaml to include new ShellContent for
BoxViews and VerticalStackLayout. Modified MauiHello.csproj
to reference the new XAML files. Created BoxViews.xaml and
VerticalStackLayout.xaml with their respective code-behind
files, implementing UI elements and layout options.

--- a/MauiHello/AppShell.xaml
+++ b/MauiHello/AppShell.xaml
@@ -18,6 +18,16 @@
              />-->
 
         <ShellContent
+            Title="VerticalStackLayout"
+            ContentTemplate="{DataTemplate views:VerticalStackLayout}"
+            />
+
+        <ShellContent
+            Title="BoxViews"
+            ContentTemplate="{DataTemplate views:BoxViews}"
+            />
+
+        <ShellContent
             Title="All Notes"
             ContentTemplate="{DataTemplate views:AllNotesPage}"
             />
