Refactor XAML attribute order for billEntry
Reordered the `TextChanged` attribute in the `billEntry`
`Entry` element to follow the `HorizontalOptions` attribute.
This change does not impact functionality but improves
the organization of the XAML markup.

--- a/MauiHello/Views/TipCalculator.xaml
+++ b/MauiHello/Views/TipCalculator.xaml
@@ -16,8 +16,7 @@
                 <Entry x:Name="billEntry"
                        Placeholder="Enter Amount"
                        Keyboard="Numeric"
-                       TextChanged="OnBillOrTipChanged"
-                       HorizontalOptions="FillAndExpand" />
+                       TextChanged="OnBillOrTipChanged" />
             </HorizontalStackLayout>
 
             <!-- Tip group -->
