--- a/MauiHello/Views/VerticalStackLayout.xaml
+++ b/MauiHello/Views/VerticalStackLayout.xaml
@@ -4,35 +4,47 @@
              x:Class="MauiHello.Views.VerticalStackLayout"
              Title="VerticalStackLayout">
 
-    <!--  5. Sætter man VerticalOptions på selve VerticalStackLayout, vil det have indflydelse på indholdets placering på siden  -->
-    <VerticalStackLayout Padding="10" Spacing="30">
-
-        <!--  1. Default fylder en kontrol hele bredden af containeren (HorizontalOptions="Fill") og centrerer sit indhold  -->
-        <Button Text="Default Width and HorizontalOption" />
-
-        <!--  2. Når der sættes en WidthRequest på en kontrol, så fylder den kun den angivne bredde og centreres  -->
-        <Button Text="Default HorizontalOption" WidthRequest="100" />
-
-        <!--  3. HorizontalOptions kan bruges til at styre hvordan en kontrol placeres i forhold til containeren  -->
-        <Button
-            HorizontalOptions="Start"
-            Text="Start"
-            WidthRequest="100" />
-        <Button
+    <Grid
+        ColumnDefinitions="*,*"
+        ColumnSpacing="6"
+        RowDefinitions="2*,*,100"
+        RowSpacing="6">
+        <BoxView Color="Green" />
+        <Label
             HorizontalOptions="Center"
-            Text="Center"
-            WidthRequest="100" />
-        <Button
-            HorizontalOptions="End"
-            Text="End"
-            WidthRequest="100" />
-
-        <!--  4. VerticalOptions har ingen effekt på et VerticalStackPanel og bør undgås  -->
-        <Button
-            Text="End"
-            VerticalOptions="End"
-            WidthRequest="100" />
-
-    </VerticalStackLayout>
-
+            Text="Row 0, Column 0"
+            VerticalOptions="Center" />
+        <BoxView Grid.Column="1" Color="Blue" />
+        <Label
+            Grid.Column="1"
+            HorizontalOptions="Center"
+            Text="Row 0, Column 1"
+            VerticalOptions="Center" />
+        <BoxView Grid.Row="1" Color="Teal" />
+        <Label
+            Grid.Row="1"
+            HorizontalOptions="Center"
+            Text="Row 1, Column 0"
+            VerticalOptions="Center" />
+        <BoxView
+            Grid.Row="1"
+            Grid.Column="1"
+            Color="Purple" />
+        <Label
+            Grid.Row="1"
+            Grid.Column="1"
+            HorizontalOptions="Center"
+            Text="Row1, Column 1"
+            VerticalOptions="Center" />
+        <BoxView
+            Grid.Row="2"
+            Grid.ColumnSpan="2"
+            Color="Red" />
+        <Label
+            Grid.Row="2"
+            Grid.ColumnSpan="2"
+            HorizontalOptions="Center"
+            Text="Row 2, Columns 0 and 1"
+            VerticalOptions="Center" />
+    </Grid>
 </ContentPage>
