--- a/MauiHello/Views/TestPage.xaml
+++ b/MauiHello/Views/TestPage.xaml
@@ -3,18 +3,68 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MauiHello.Views.TestPage"
              Title="TestPage">
-    <StackLayout Orientation="Vertical" Spacing="0">
-        <BoxView
-        HeightRequest="100"
-        WidthRequest="100"
-        Color="Red" />
-        <BoxView
-        HeightRequest="100"
-        WidthRequest="100"
-        Color="Yellow" />
-        <BoxView
-        HeightRequest="100"
-        WidthRequest="100"
-        Color="Green" />
-    </StackLayout>
+    <Grid RowDefinitions="Auto,*,*,*,*,*"
+          ColumnDefinitions="*,*,*,*"
+          Padding="0"
+          BackgroundColor="#808080">
+
+        <!-- Display -->
+        <Label x:Name="displayLabel"
+               Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="4"
+               Text="0"
+               FontSize="36"
+               TextColor="White"
+               HorizontalTextAlignment="End"
+               VerticalTextAlignment="Center"
+               BackgroundColor="#808080"
+               Padding="10,20,10,10" />
+
+        <!-- Top row: C, +/-, %, div -->
+        <Button Text="C" Grid.Row="1" Grid.Column="0" 
+                BackgroundColor="#D3D3D3" FontSize="24" />
+        <Button Text="+/-" Grid.Row="1" Grid.Column="1" 
+                BackgroundColor="#D3D3D3" FontSize="24" />
+        <Button Text="%" Grid.Row="1" Grid.Column="2" 
+                BackgroundColor="#D3D3D3" FontSize="24" />
+        <Button Text="div" Grid.Row="1" Grid.Column="3" 
+                BackgroundColor="#FFA500" TextColor="White" FontSize="24" />
+
+        <!-- Row 2: 7, 8, 9, X -->
+        <Button Text="7" Grid.Row="2" Grid.Column="0" 
+                BackgroundColor="#D3D3D3" FontSize="24" />
+        <Button Text="8" Grid.Row="2" Grid.Column="1" 
+                BackgroundColor="#D3D3D3" FontSize="24" />
+        <Button Text="9" Grid.Row="2" Grid.Column="2" 
+                BackgroundColor="#D3D3D3" FontSize="24" />
+        <Button Text="X" Grid.Row="2" Grid.Column="3" 
+                BackgroundColor="#FFA500" TextColor="White" FontSize="24" />
+
+        <!-- Row 3: 4, 5, 6, - -->
+        <Button Text="4" Grid.Row="3" Grid.Column="0" 
+                BackgroundColor="#D3D3D3" FontSize="24" />
+        <Button Text="5" Grid.Row="3" Grid.Column="1" 
+                BackgroundColor="#D3D3D3" FontSize="24" />
+        <Button Text="6" Grid.Row="3" Grid.Column="2" 
+                BackgroundColor="#D3D3D3" FontSize="24" />
+        <Button Text="-" Grid.Row="3" Grid.Column="3" 
+                BackgroundColor="#FFA500" TextColor="White" FontSize="24" />
+
+        <!-- Row 4: 1, 2, 3, + -->
+        <Button Text="1" Grid.Row="4" Grid.Column="0" 
+                BackgroundColor="#D3D3D3" FontSize="24" />
+        <Button Text="2" Grid.Row="4" Grid.Column="1" 
+                BackgroundColor="#D3D3D3" FontSize="24" />
+        <Button Text="3" Grid.Row="4" Grid.Column="2" 
+                BackgroundColor="#D3D3D3" FontSize="24" />
+        <Button Text="+" Grid.Row="4" Grid.Column="3" 
+                BackgroundColor="#FFA500" TextColor="White" FontSize="24" />
+
+        <!-- Row 5: 0, ",", = -->
+        <Button Text="0" Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="2" 
+                BackgroundColor="#D3D3D3" FontSize="24" />
+        <Button Text="," Grid.Row="5" Grid.Column="2" 
+                BackgroundColor="#D3D3D3" FontSize="24" />
+        <Button Text="=" Grid.Row="5" Grid.Column="3" 
+                BackgroundColor="#FFA500" TextColor="White" FontSize="24" />
+    </Grid>
 </ContentPage>
