--- a/MauiHello/AppShell.xaml
+++ b/MauiHello/AppShell.xaml
@@ -65,4 +65,13 @@
         </Tab>
     </FlyoutItem>
 
+    <FlyoutItem Title="Settings" Icon="file.png" FlyoutDisplayOptions="AsSingleItem">
+        <Tab>
+            <ShellContent
+                Title="Settings"
+                ContentTemplate="{DataTemplate views:SettingsPage}"
+                Icon="file.png" />
+        </Tab>
+    </FlyoutItem>
+
 </Shell>
