--- a/MauiHello/App.xaml
+++ b/MauiHello/App.xaml
@@ -2,6 +2,7 @@
 <Application xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:MauiHello"
+             xmlns:converters="clr-namespace:MauiHello.Converters"
              x:Class="MauiHello.App">
     <Application.Resources>
         <ResourceDictionary>
@@ -9,6 +10,10 @@
                 <ResourceDictionary Source="Resources/Styles/Colors.xaml" />
                 <ResourceDictionary Source="Resources/Styles/Styles.xaml" />
             </ResourceDictionary.MergedDictionaries>
+            
+            <!-- Value Converters -->
+            <converters:IntToBoolConverter x:Key="IntToBoolConverter" />
+
         </ResourceDictionary>
     </Application.Resources>
 </Application>
